# recognition-

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Eye  Makefile  VideoFaceDetector.cpp  VideoFaceDetector.hpp  cmake_install.cmake  main.cpp  receiver.c  sender.c  sender.h
