cmake_minimum_required(VERSION 2.8)
project( Eye )
SET(COMPILE_DEFENITIONS -v -std=c++11)
SET(CMAKE_CXX_FLAGS "-Wall -std=c++0x")
find_package( OpenCV )
find_package (Threads)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Eye    VideoFaceDetector.cpp main.cpp  sender.c receiver.c )
target_link_libraries( Eye ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT} )
